--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My First Web Page</title>
+</head>
+<body>
+    <h1>Welcome to my first web page!</h1>
+    <p>This is a paragraph of text.</p>
+</body>
+</html>
